load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "docs",
    out = "README.md",
    input = "doc_hub.bzl",
    symbol_names = [
        "tinygo_binary",
        "tinygo_download",
        "binaryen_download",
    ],
    deps = [
        "//binaryen:binaryen-rules",
        "//tinygo:internal-rules",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:shell",
        "@io_bazel_rules_go//go:def",
    ],
)

diff_test(
    name = "docs_diff_test",
    failure_message = "To fix, run 'cp -f ./bazel-bin/docs/README.md ./README.md' from the root of the repo.",
    file1 = ":docs",
    file2 = "//:README.md",
)
