load("@rules_go//go:def.bzl", "go_test")
load("@rules_tinygo//tinygo:defs.bzl", "tinygo_binary")

tinygo_binary(
    name = "hello_wasi",
    srcs = ["hello.go"],
    out = "hello.wasi",
    target = "wasi",
)

go_test(
    name = "hello_test",
    srcs = ["hello_test.go"],
    data = [":hello_wasi"],
)
