# Override http_archive for local testing
local_repository(
    name = "rules_tinygo",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_tinygo setup #
######################
# Fetches the rules_tinygo dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_tinygo//tinygo:repositories.bzl", "rules_tinygo_dependencies")

rules_tinygo_dependencies()
